<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserDetailsActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:padding="5dp"
        android:text="@string/please_edit_your_details"
        android:textAlignment="center"
        android:textSize="18sp" />

    <ScrollView android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_above="@id/saveUserDetails"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/usernameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:text="@string/name"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/usernameText"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:padding="5dp"
                    android:hint="@string/enterName"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/usernameText"
                    android:layout_alignParentStart="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:text="@string/mobile"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editName"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:padding="5dp"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/emailText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/mobile"
                    android:layout_alignParentStart="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:text="@string/email"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/mobile"
                    android:layout_alignBottom="@+id/emailText"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:padding="5dp"
                    android:hint="@string/enterEmail"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:id="@+id/addressText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/emailText"
                    android:layout_alignParentStart="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="20dp"
                    android:padding="5dp"
                    android:text="@string/Address"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/addressLine1Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/addressText"
                    android:layout_alignParentStart="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:text="@string/line1"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/line1edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/addressText"
                    android:layout_alignBottom="@+id/addressLine1Text"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:padding="5dp"
                    android:hint="@string/enterLine1"
                    android:inputType="textPostalAddress" />

                <TextView
                    android:id="@+id/addressLine2Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/addressLine1Text"
                    android:layout_alignParentStart="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:text="@string/line2"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/line2edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/line1edit"
                    android:layout_alignBottom="@id/addressLine2Text"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/enterLine2"
                    android:padding="5dp"
                    android:inputType="textPostalAddress" />

                <TextView
                    android:id="@+id/cityText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/addressLine2Text"
                    android:layout_alignParentStart="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:text="@string/city"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/cityEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/line2edit"
                    android:layout_alignBottom="@id/cityText"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:padding="5dp"
                    android:hint="@string/enterCity"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/stateText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cityText"
                    android:layout_alignParentStart="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:text="@string/enterState"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/stateEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cityEdit"
                    android:layout_alignBottom="@id/stateText"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:padding="5dp"
                    android:hint="@string/state"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/pincodeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/stateText"
                    android:layout_alignParentStart="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:text="@string/pincode"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/pincodeEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/stateEdit"
                    android:layout_alignBottom="@id/pincodeText"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:padding="5dp"
                    android:hint="@string/enterPincode"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/countryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/pincodeText"
                    android:layout_alignParentStart="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:text="@string/country"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/countryEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/pincodeEdit"
                    android:layout_alignBottom="@id/countryText"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:padding="5dp"
                    android:hint="@string/enterCountry"
                    android:inputType="text" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/saveUserDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:padding="15dp"
        android:enabled="false"
        android:text="@string/save_details" />
</RelativeLayout>